Add version number (v1.0.0) to track deployments

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                 <!-- Note names will be displayed here -->
             </div>
         </div>
+        
+        <div class="version">
+            v1.0.0
+        </div>
     </div>
     <script src="intervals.js"></script>
     <script src="app.js"></script>
