Add more string pairs for thirds and bump version to v1.0.3

--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
             <div id="noteDisplay" class="note-display">
                 <!-- Note names will be displayed here -->
             </div>
+            <div id="intervalCount" class="interval-count">
+                <!-- Interval count will be displayed here -->
+            </div>
         </div>
         
         <div class="version">
-            v1.0.2
+            v1.0.3
         </div>
     </div>
     <script src="intervals.js"></script>
