--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
                 <span id="tempoValue">60</span>
             </div>
 
+            <div class="control-group">
+                <label>Practice Mode:</label>
+                <select id="practiceMode">
+                    <option value="breadth">Breadth First</option>
+                    <option value="depth">Depth First</option>
+                    <option value="random">Random</option>
+                </select>
+            </div>
+
             <button id="playButton">Play</button>
         </div>
 
@@ -55,7 +64,7 @@
         </div>
         
         <div class="version">
-            v1.0.3
+            v1.0.4
         </div>
     </div>
     <script src="intervals.js"></script>
