Add sound support with mute control and bump version to v1.0.5

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
                 </select>
             </div>
 
+            <div class="control-group">
+                <button id="muteButton" class="mute-button muted" title="Toggle sound (M)">🔇</button>
+            </div>
+
             <button id="playButton">Play</button>
         </div>
 
@@ -64,10 +68,10 @@
         </div>
         
         <div class="version">
-            v1.0.4
+            v1.0.5
         </div>
     </div>
+    <script src="sounds.js"></script>
     <script src="intervals.js"></script>
-    <script src="app.js"></script>
 </body>
 </html> 
