Add pause/resume functionality and fix mobile layout. Bump version to v1.0.9

--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
                 <button id="muteButton" class="mute-button muted" title="Toggle sound (M)">🔇</button>
             </div>
 
-            <button id="playButton">Play</button>
+            <div class="playback-controls">
+                <button id="playButton">Play</button>
+                <button id="pauseButton" disabled>Pause</button>
+            </div>
         </div>
 
         <div class="display">
@@ -68,7 +71,7 @@
         </div>
         
         <div class="version">
-            v1.0.8
+            v1.0.9
         </div>
     </div>
     <script src="sounds.js"></script>
