Add guitar neck diagram visualization. Bump version to v1.0.11

--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
             <div id="noteDisplay" class="note-display">
                 <!-- Note names will be displayed here -->
             </div>
+            <div id="neckDisplay" class="neck-display">
+                <!-- Guitar neck diagram will be displayed here -->
+            </div>
             <div id="intervalCount" class="interval-count">
                 <!-- Interval count will be displayed here -->
             </div>
         </div>
         
         <div class="version">
-            v1.0.10
+            v1.0.11
         </div>
     </div>
     <script src="sounds.js"></script>
