--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
         </div>
         
         <div class="version">
-            v1.0.11
+            v1.0.12
+        </div>
+        <div class="credit">
+            Created by Eran Shir
         </div>
     </div>
     <script src="sounds.js"></script>
