--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <div class="container">
         <h1>Guitar Interval Trainer</h1>
         
+        <div class="trainer-mode-group" style="margin:10px 20px; text-align:left;">
+            <label style="margin-right:10px;">
+                <input type="radio" name="trainerMode" value="intervals" checked>
+                Interval Trainer
+            </label>
+            <label>
+                <input type="radio" name="trainerMode" value="scales">
+                Scale Trainer
+            </label>
+        </div>
+
         <div class="controls">
             <div class="control-group">
                 <label>Interval Type:</label>
@@ -55,12 +66,49 @@
             <div class="playback-controls">
                 <button id="playButton">Play</button>
                 <button id="pauseButton" disabled>Pause</button>
+                <button id="metroButton">Metronome Off</button>
             </div>
+        </div>
+
+        <div id="scaleOptions" style="display:none;">
+            <label for="scaleType">Scale Type:</label>
+            <select id="scaleType">
+                <option value="Major">Major (Ionian)</option>
+                <option value="Minor">Minor (Aeolian)</option>
+                <option value="Pentatonic">Pentatonic</option>
+                <option value="Blues">Blues</option>
+                <option value="Dorian">Dorian</option>
+                <option value="Phrygian">Phrygian</option>
+                <option value="Lydian">Lydian</option>
+                <option value="Mixolydian">Mixolydian</option>
+                <option value="Locrian">Locrian</option>
+                <option value="Harmonic Minor">Harmonic Minor</option>
+                <option value="Melodic Minor">Melodic Minor</option>
+            </select>
+            
+            <label for="scaleKey">Key:</label>
+            <select id="scaleKey">
+                <option value="C">C</option>
+                <option value="C#">C#</option>
+                <option value="D">D</option>
+                <option value="D#">D#</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="F#">F#</option>
+                <option value="G">G</option>
+                <option value="G#">G#</option>
+                <option value="A">A</option>
+                <option value="A#">A#</option>
+                <option value="B">B</option>
+            </select>
         </div>
 
         <div class="display">
             <div id="tabDisplay" class="tab-display">
-                <!-- Tab will be displayed here -->
+                <!-- Text representation (letters) of the scale will be displayed here -->
+            </div>
+            <div id="scaleTabDisplay" class="scale-tab-display">
+                <!-- Tab representation for current note will be displayed here -->
             </div>
             <div id="noteDisplay" class="note-display">
                 <!-- Note names will be displayed here -->
@@ -82,5 +130,33 @@
     </div>
     <script src="sounds.js"></script>
     <script src="intervals.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', () => {
+        const scaleOptions = document.getElementById('scaleOptions');
+        const trainerRadios = document.getElementsByName('trainerMode');
+        // When mode changes, show/hide scale options.
+        trainerRadios.forEach(radio => {
+            radio.addEventListener('change', () => {
+                if (radio.checked && radio.value === 'scales') {
+                    scaleOptions.style.display = 'block';
+                } else if (radio.checked && radio.value === 'intervals') {
+                    scaleOptions.style.display = 'none';
+                }
+            });
+        });
+
+        const playButton = document.getElementById('playButton');
+        playButton.onclick = () => {
+            const mode = document.querySelector('input[name="trainerMode"]:checked').value;
+            if (mode === 'scales') {
+                const scaleType = document.getElementById('scaleType').value;
+                const scaleKey  = document.getElementById('scaleKey').value;
+                playScaleMode(scaleType, scaleKey);
+            } else {
+                startPlaying();
+            }
+        };
+      });
+    </script>
 </body>
 </html> 
